testdata/baselines/reference/submodule/compiler/jsDocDeclarationEmitDoesNotUseNodeModulesPathWithoutError.errors.txt
index.js(7,8): error TS8009: The '?' modifier can only be used in TypeScript files.
index.js(7,16): error TS8010: Type annotations can only be used in TypeScript files.


==== package.json (0 errors) ====
    {
        "name": "typescript-issue",
        "private": true,
        "version": "0.0.0",
        "type": "module"
    }
==== node_modules/@lion/ajax/package.json (0 errors) ====
    {
        "name": "@lion/ajax",
        "version": "2.0.2",
        "type": "module",
        "exports": {
          ".": {
            "types": "./dist-types/src/index.d.ts",
            "default": "./src/index.js"
          },
          "./docs/*": "./docs/*"
        }
    }
==== node_modules/@lion/ajax/dist-types/src/index.d.ts (0 errors) ====
    export type LionRequestInit = import('../types/types.js').LionRequestInit;
==== node_modules/@lion/ajax/dist-types/types/types.d.ts (0 errors) ====
    export interface LionRequestInit {
        body?: null | Object;
    } 
==== index.js (2 errors) ====
    /**
     * @typedef {import('@lion/ajax').LionRequestInit} LionRequestInit
     */
    
    export class NewAjax {
        /**
         * @param {LionRequestInit} [init]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
                   ~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        case5_unexpectedlyResolvesPathToNodeModules(init) {}
    }
    
    /**
     * @type {(init?: LionRequestInit) => void}
     */
    // @ts-expect-error
    NewAjax.prototype.case6_unexpectedlyResolvesPathToNodeModules;